scale-in-cluster/pod-scaler.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: pod-scaler-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: podmanagement.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pod-scaler-service
            port:
              number: 8080
